# saqta

./: .gitignore  CHANGELOG.md  CONTINUE-ON-MAC.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP-PROMPT-FOR-CLAUDE.md  install.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
RELEASES/: v0.1.0.md  v0.2.0.md
assets/: make-transparent.sh
docs/: architecture.md  custom-models.md  research-qwen3.5-omni.md  troubleshooting.md
launchagents/: create-desktop-shortcut.sh  install-launchagent.sh  install-meeting-detector.sh  uninstall-launchagent.sh  uninstall-meeting-detector.sh
marketing/linkedin/: 01-launch-announcement.md  02-tech-deep-dive.md  03-meetily-comparison.md  README.md
scripts/: auto-transcribe.sh  detect-lang.sh  diarize.sh  export.sh  kt  meeting-detector.sh  saqta  setup-pyannote.sh  setup-qwen3.sh  summarize.sh  transcribe-auto.sh  transcribe-file.sh  transcribe-kk.sh  transcribe-progress.sh  transcribe-roles.sh
tauri-app/: README.md  index.html  package.json
tauri-app/src/: App.svelte
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/lib/: Widget.svelte
templates/: 1on1.txt  interview.txt  kazakh-formal.txt  lecture.txt  protocol.txt
