[package]
name = "saqta-app"
version = "0.3.0"
description = "Saqta — privacy-first meeting transcriber for macOS"
authors = ["moldabayevd"]
license = "MIT"
edition = "2021"

[lib]
name = "saqta_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
regex = "1.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
